# onehundredandfour

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: unit-tests.yml
docs/: rules.md
onehundredandfour/: app.py
onehundredandfour/game/: card.py  cards.py  deck.py  game.py  player.py
src/: onehundredandfour.py
tests/: test_app.py  test_cards.py  test_deck.py  test_game.py  test_player.py
